Windows scrollbar bug fix

--- a/style/less/style.less
+++ b/style/less/style.less
@@ -340,6 +340,7 @@ header {
 			white-space: normal;
 		}
 		@media @tablet {
+			overflow-x: hidden;
 			.flex-wrap(wrap);
 			.flex(1 1 auto);
 		}
